# personal-website

./: Cargo.toml  Makefile  README.md  package.json  vercel.json
api/: Cargo.toml  health.rs  hello.rs
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  PersonalDetailsPage.tsx  index.css
server/: Cargo.toml
server/src/: main.rs
